# nexon

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
frontend/: package-lock.json  package.json
frontend/src/: config.js
frontend/src/pages/: DeploymentPage.js  InferencePage.js  ModelOverview.js  UploadPage.js
ops/envoy/: envoy.compose.yaml  envoy.dev.yaml
server/: .dockerignore  .env.example  .gitignore  Dockerfile.grpc  Dockerfile.rest  inference_pb2.pyi  main.py  requirements.txt
server/app/services/: database.py  deployment.py  inference.py  upload.py
server/app/services/shared/: model_cache.py  orchestrator.py
server/envoy/: envoy.yaml
server/grpc_service/: Dockerfile  __init__.py  gen_protos_and_build_stubs.sh  grpc_healthcheck.py  grpc_server.py  grpc_server_async.py  inference_pb2.py  inference_pb2_grpc.py  server.py
server/grpc_service/protos/: inference.proto
server/rest/: Dockerfile  main.py
server/rest/app/services/: deployment.py  inference.py  upload.py
server/shared/: database.py  model_cache.py  orchestrator.py
server/tests/: README.md
server/tests/assets/: fetch_models.sh
server/tests/functional/: check_acceptance.sh
server/tests/resource_utilization/: build_ru_summaries.sh  run_resource_utilization.sh  run_ru_all.sh  run_ru_capture.sh  run_ru_load.sh  trim_steady_state.sh
server/tests/robustness/: run_rt_all_local.sh
server/tools/: README.md  client_test.py
server/tools/presets/: sigmoid_input.yaml
(+316 files in other folders)
